// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableBody renders 1`] = `
<td
  className="ax-table__cell ax-table__cell--align-left"
>
  123456
</td>
`;

exports[`TableBody renders with isSelected 1`] = `
<td
  className="ax-table__cell ax-table__cell--align-left ax-table__cell--selected"
>
  123456
</td>
`;

exports[`TableBody renders with textAlign 1`] = `
<td
  className="ax-table__cell ax-table__cell--align-right"
>
  123456
</td>
`;
